--- a/.github/workflow/testreport.yml
+++ b/.github/workflow/testreport.yml
@@ -1,10 +1,7 @@
 name: Unit Test Results (reference)
 
 on:
-  workflow_run:
-    workflows: ["CI/CD"]
-    types:
-      - completed
+  push
 
 jobs:
   debug:
